5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1643_2447.log
== TEST (2019-04-08 18:39:51) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento)
	x = preco - pagamento
	print("Falta ", x)

else:
	y = pagamento - preco
	print("Troco de ", y)
-- ERROR:
File "XXXX", line 4
    if (preco > pagamento)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:40:26) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta ", x)

else:
	y = pagamento - preco
	print("Troco de ", y)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:40:45) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta ",x)

else:
	y = pagamento - preco
	print("Troco de ",y)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:40:57) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",x)

else:
	y = pagamento - preco
	print("Troco de",y)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:41:05) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",x)

else:
	y = pagamento - preco
	print("Troco de",y)
-- EXECUTION TIME:
0.142114
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:59:31) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",y)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:59:53) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:00:01) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:00:06) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:00:12) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:00:20) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:00:31) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:00:43) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))

if (preco > pagamento):
	x = preco - pagamento
	print("Falta",round(x,2))

else:
	y = pagamento - preco
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.19185
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
